# PAM

./: .env.example  .gitignore  CLAUDE.md  README.md  dev.bat  docker-compose.yml  handoff.md  implementation-plan.html  stop-dev.bat
.claude/commands/: handoff.md
.planning/: ROADMAP.md  STATE.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  2ec708645017_chunks_embeddings.py  4b747af609d8_profile_facts.py  68113919ba65_conversations_pinned_archived_sidebar.py  96d1d6982add_content_sources_content_chunks_phase5_.py  a1a3e3d1fb0d_courses_table_phase5_lecturer.py  efc12b5654c3_saved_messages.py
backend/app/: config.py  content.py  courses.py  db.py  extraction.py  indexing.py  llm.py  main.py  models.py  normalizers.py  schemas.py
backend/app/routes/: chat.py  conversations.py  facts.py  indexing.py  learn.py  saved.py  search.py
docs/: NEW_MACHINE_PROMPT.md  SETUP.md  VIBE_PROMPT.md  ai-ecosystem-catalog.md  claude-code-best-practices.md  v0-chat-ui-prompt.md
extension/: INSTALL.md  background.ts  package-lock.json  package.json  popup.tsx
extension/contents/: chatgpt.ts  claude.ts  gemini.ts  relay.ts
extension/lib/: api.ts
v0dev/app/: globals.css  layout.tsx  page.tsx
v0dev/components/pam/: chat-app.tsx  chat-input.tsx  chat-sidebar.tsx  index.ts  message-list.tsx  navbar.tsx
web/: INSTALL.md  package-lock.json  package.json
web/app/: chat-sidebar.tsx  globals.css  layout.tsx  markdown.tsx  nav.tsx  page.tsx  refresh-button.tsx
web/lib/: api.ts  cache.ts  catalog.ts
(+6 files in other folders)
