[project]
name = "pam-backend"
version = "0.1.0"
description = "Personal AI Memory — backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "python-multipart",
    "pgvector>=0.3",
]

[tool.setuptools]
packages = ["app"]
